# granada

./: .gitignore  README.md  cartel.html  coloquio.html  index.html  poesia-musica.html  pyproject.toml  script.js  styles.css
docs/: README.md
firebase/: .env.example  firestore.indexes.json  firestore.rules
firebase/functions/: .eslintrc.json  jest.config.js  package.json  tsconfig.json
firebase/functions/src/: index.ts
firebase/functions/tests/: bookingService.test.ts
prompts/: prompts.json
public-web/: .env.example  index.html  package.json
public-web/src/: firebase.ts  main.tsx
react-admin/: .env.example  index.html  package.json
react-admin/src/: App.tsx  firebase.ts
react-admin/src/components/: ServiceTable.tsx
react-admin/src/pages/: CalendarPage.tsx  Login.tsx
src/gestor_citas_avanzado/: __init__.py  cli.py  models.py  service.py  storage.py
tests/: test_scheduler.py
