[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gestor-citas-avanzado"
version = "0.1.0"
description = "Herramienta ligera para gestionar citas desde la línea de comandos"
authors = [{name = "IA Assistant"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
gestor-citas = "gestor_citas_avanzado.cli:main"
